package com.lucifer.A06_Builder.improve;

public class HighBuilding extends HouseBuilder {
    public void buildBasic() {
        System.out.println("高楼打地基");
    }

    public void buildWalls() {
        System.out.println("高楼砌墙");
    }

    public void buildRoofs() {
        System.out.println("高楼封顶");
    }
}
